<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1F1F1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/large"
            android:text="@string/Category"
            android:textSize="@dimen/title_large"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:hint="@string/Name_hint"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/large"
            android:text="@string/Intro"
            android:textSize="@dimen/heading_body_regular" />

        <LinearLayout style="@style/LinearLayout">

            <ImageView
                style="@style/Image"
                android:src="@drawable/earth" />

            <TextView
                android:id="@+id/planet_earth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/xsmall"
                android:text="@string/question1"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/enter_earth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/xsmall"
                android:layout_marginBottom="@dimen/xsmall"
                android:hint="@string/answer_hint"
                android:inputType="textCapWords"
                android:onClick="submitAnswer" />

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <ImageView
                style="@style/Image"
                android:src="@drawable/gold" />

            <TextView
                android:id="@+id/gold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/question2"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/gold_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/gold_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goldRadio"
                    android:padding="10dp"
                    android:text="@string/correct" />

                <RadioButton
                    android:id="@+id/gold_wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="goldRadio"
                    android:padding="10dp"
                    android:text="@string/wrong" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <ImageView
                style="@style/Image"
                android:src="@drawable/ocean" />

            <TextView
                android:id="@+id/ocean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/question3"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/ocean_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/ocean_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="oceanRadio"
                    android:padding="10sp"
                    android:text="@string/correct" />

                <RadioButton
                    android:id="@+id/ocean_wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="oceanRadio"
                    android:padding="10sp"
                    android:text="@string/wrong" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <ImageView
                style="@style/Image"
                android:src="@drawable/hell" />

            <TextView
                android:id="@+id/hell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/question4"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/hell_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/hell_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="hellRadio"
                    android:padding="10dp"
                    android:text="@string/correct" />

                <RadioButton
                    android:id="@+id/hell_wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="hellRadio"
                    android:padding="10dp"
                    android:text="@string/wrong" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <ImageView
                style="@style/Image"
                android:src="@drawable/mount" />

            <TextView
                android:id="@+id/mountain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/question5"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/mountain_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/mountain_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mountainRadio"
                    android:padding="10dp"
                    android:text="@string/correct" />

                <RadioButton
                    android:id="@+id/mountain_wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="mountainRadio"
                    android:padding="10dp"
                    android:text="@string/wrong" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <ImageView
                style="@style/Image"
                android:src="@drawable/hot" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/question6"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/answerA_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:padding="10sp"
                android:text="@string/question6a" />

            <CheckBox
                android:id="@+id/answerB_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:padding="10sp"
                android:text="@string/question6b" />

            <CheckBox
                android:id="@+id/answerC_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:padding="10sp"
                android:text="@string/question6c" />

            <CheckBox
                android:id="@+id/answerD_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:padding="10sp"
                android:text="@string/question6d" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <ImageView
                style="@style/Image"
                android:src="@drawable/volcano" />

            <TextView
                android:id="@+id/question_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/question7"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/volcano_Radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/volcano_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="volcanoRadio"
                    android:padding="10dp"
                    android:text="@string/correct" />

                <RadioButton
                    android:id="@+id/volcano_wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="volcanoRadio"
                    android:padding="10dp"
                    android:text="@string/wrong" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <ImageView
                style="@style/Image"
                android:src="@drawable/pacific_basin" />

            <TextView
                android:id="@+id/question_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/question8"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/pacific_Radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/pacific_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="pacificRadio"
                    android:padding="10dp"
                    android:text="@string/correct" />

                <RadioButton
                    android:id="@+id/pacific_wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="pacificRadio"
                    android:padding="10dp"
                    android:text="@string/wrong" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <ImageView
                style="@style/Image"
                android:src="@drawable/dessert" />

            <TextView
                android:id="@+id/question_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/question9"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/saharaA_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saharaCheckboxClicked"
                android:padding="10sp"
                android:text="@string/question9a" />

            <CheckBox
                android:id="@+id/saharaB_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saharaCheckboxClicked"
                android:padding="10sp"
                android:text="@string/question9b" />

            <CheckBox
                android:id="@+id/saharaC_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="saharaCheckboxClicked"
                android:padding="10sp"
                android:text="@string/question9c" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayout">

            <ImageView
                style="@style/Image"
                android:src="@drawable/coral_reef" />

            <TextView
                android:id="@+id/question_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/question10"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/reef_Radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/reef_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="reefRadio"
                    android:padding="10dp"
                    android:text="@string/correct" />

                <RadioButton
                    android:id="@+id/reef_wrong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="reefRadio"
                    android:padding="10dp"
                    android:text="@string/wrong" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:onClick="submitPoints"
            android:text="@string/submit"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:onClick="resetQuiz"
            android:text="@string/reset"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>
